--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -134,6 +134,7 @@ header{
 
     .tag{
         font-size: 0.5rem;
+        padding: 3px 15px;
     }
 
     .title{
@@ -145,8 +146,12 @@ header{
     }
 
     .button-about, .button-contact{
-        font-size: 0.6rem;
-        padding: 10px 25px;
+        font-size: 0.8rem;
+        padding: 7px 20px;
+    }
+
+    .button-about{
+        border: 2px solid #252525;
     }
 }
 
@@ -155,8 +160,17 @@ header{
         flex-direction: column;
     }
 
+    .tag{
+        border: 2px solid #252525;
+    }
+
     .title{
         font-size: 1.5rem;
+        margin-top: 10px;
+    }
+
+    .sub-title{
+        font-size: 0.7rem;
     }
 }
 
