--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -53,6 +53,10 @@ li:hover{
     
 }
 
+a{
+    text-decoration: none;
+}
+
 .button-cv:hover{
     background-color: #1a1a1a;
     transition: 0.1s;
