--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -16,7 +16,7 @@
     gap: 20px;
     align-items: start;
     justify-content: start;
-    background-color: #070707;
+    background-image: linear-gradient(45deg, #101010 0%, #080808 50%, #050505 100%);
     border-radius: 5px;
 }
 
