--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -104,7 +104,7 @@ header{
     margin-top: 30px;
     width: 50px;
     height: 10px;
-    background-color: #0a0a0a;
+    background-color: #101010;
     border-radius: 50px;
     margin-bottom: 15px;
 }
