--- a/src/styles/Education.css
+++ b/src/styles/Education.css
@@ -1,5 +1,5 @@
 .button-download{
-    width: fit-content;
+    max-width: max-content;
     font-weight: 500;
     display: flex;
     align-items: center;
@@ -8,10 +8,12 @@
     padding: 10px 40px;
     border-radius: 3px;
     cursor: pointer;
+    margin-top: 10px;
 }
 
 @media (max-width: 768px) {
     .button-download{
     font-size: 0.6rem;
     }
+
 }
