nuevos icons, ajuste de contraste

--- a/src/styles/Education.css
+++ b/src/styles/Education.css
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #cdfe77;
+    background-color: #bfff50;
     padding: 10px 40px;
     border-radius: 3px;
     cursor: pointer;
