--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -25,7 +25,7 @@ main{
     background-color: #050505;
     padding: 20px 200px 20px 240px;
     align-items: start;
-    justify-content: start;
+    justify-content: center;
     display: flex;
     flex-direction: column;
 }
