nuevo estilo xd

--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -1,5 +1,5 @@
 .project-container{
-    width: 100%;
+    width: fit-content;
     height: fit-content;
     background-color: #101010;
     border-radius: 5px;
@@ -8,8 +8,7 @@
 }
 
 .project-container img{
-    width: 100%;
-    height: 300px;
+    width: 500px;
     background-color: rgb(0, 255, 115);
     background-size: contain;
     background-repeat: no-repeat;
@@ -77,6 +76,13 @@
     color: #ffffff;
 }
 
+@media (max-width: 600px) {
+
+
+    .project-container img{
+        width: 100%;
+    }
+}
 
 @media (max-width: 410px) {
     .tags-project{
@@ -88,7 +94,7 @@
     }
 
     .project-container img{
-        height: 150px;
+        width: 100%;
     }
     
     .cont-sub-title-projects{
